# Digital_Mentoring_System

./: .gitignore  db.sqlite3  manage.py  pranavkadagadakai-digital_mentoring_system.txt  pyproject.toml  requirements.txt
Digital_Mentoring_System/: asgi.py  settings.py  urls.py  wsgi.py
core/: forms.py  models.py  urls.py  utils.py  views.py
core/migrations/: 0001_initial.py  0002_noncreditcourse_performanceanalytics.py  0003_mentorassignment.py  0004_user_full_name_user_usn.py  0005_alter_marks_credit_points_alter_marks_grade_and_more.py
static/css/: styles.css
static/js/: script.js
templates/core/: base.html  dashboard.html  grade_card.html  input_marks.html  landing_page.html  login.html  mentor_analysis.html  profile.html  register.html  result_analysis.html  scoreboard.html
