[project]
name = "digital-mentoring-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref>=3.10.0",
    "contourpy>=1.3.3",
    "cycler>=0.12.1",
    "django>=5.2.7",
    "fonttools>=4.60.1",
    "kiwisolver>=1.4.9",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "packaging>=25.0",
    "pillow>=11.3.0",
    "pyparsing>=3.2.5",
    "python-dateutil>=2.9.0.post0",
    "six>=1.17.0",
    "sqlparse>=0.5.3",
]
